test: fix postinstall tests failing on non-existent npm package version
Commit 8a6ddde3f8 changed `setupPostinstallPackages()` to reference
`@vaadin/vaadin-usage-statistics` at version `0.0.1`, which does not
exist on the npm registry. When `shouldRunNpmInstall()` returns true
(no vaadin.json hash file), `cleanUp()` deletes the pre-populated
node_modules and pnpm/npm install tries to fetch the non-existent
version, failing with ERR_PNPM_NO_MATCHING_VERSION.

Use a local file path (`./fake-stats`) instead of a registry version,
matching the pattern already used for the `foo` test package. The
`fake-stats/` directory lives outside node_modules/ so it survives the
`cleanUp()` deletion and serves as the install source.

Also replace Apache Commons IO (`FileUtils`, `IOUtils`) with standard
Java APIs (`Files.writeString`, `Files.readString`, `readAllBytes`) in
both `TaskRunNpmInstallTest` and `TaskRunPnpmInstallTest`.